# LearnMetalCPP

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl
LearnMetalCPP.xcodeproj/project.xcworkspace/xcuserdata/blake.xcuserdatad/: UserInterfaceState.xcuserstate
learn-metal/00-window/: .gitignore  CMakeLists.txt
learn-metal/01-primitive/: .gitignore  01-primitive.cpp  CMakeLists.txt
learn-metal/02-argbuffers/: .gitignore  CMakeLists.txt
learn-metal/03-animation/: .gitignore  CMakeLists.txt
learn-metal/09-compute-to-render/: .gitignore  CMakeLists.txt
